Downgrade to Java 8 API
- DriverManager.drivers() from Java 9
- String.isBank() from Java 11